--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "exceljs": "^4.3.0",
+    "lodash": "^4.17.21",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "read-excel-file": "^5.5.3",
+    "unflatten": "^1.0.4",
+    "web-vitals": "^2.1.4",
+    "write-excel-file": "^1.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
