fix UI + log error msg

--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "format-language-json",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lthaibinh.github.io/Matched-Multi-Languages-Json/",
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "exceljs": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "read-excel-file": "^5.5.3",
+    "save-dev": "0.0.1-security",
     "unflatten": "^1.0.4",
     "web-vitals": "^2.1.4",
     "write-excel-file": "^1.4.15"
@@ -21,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
